# FaceAttendance

./: CMakeLists.txt  face.db  faceattendance.cpp  faceattendance.h  faceattendance.ui  server.db
AttendanceServer/: CMakeLists.txt  QFaceObject.cpp  QFaceObject.h  README.md  attendancewin.cpp  attendancewin.h  attendancewin.ui  main.cpp  registerwin.cpp  registerwin.h  registerwin.ui  selectwin.cpp  selectwin.h  selectwin.ui
FaceAttendance/: .gitmodules  CMakeLists.txt  README.md  faceattendance.cpp  faceattendance.h  faceattendance.ui
